force-app/main/default/objects/FEC_Campaign__c/FEC_Campaign__c.object-meta.xml
<CustomObject>
    <label>FEC Campaign</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>