force-app/main/default/objects/FEC_Campaign__c/fields/FEC_CampaignCallingList__c.field-meta.xml
<CustomField>
    <fullName>FEC_CampaignCallingList__c</fullName>
    <label>Campaign Calling List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>