force-app/main/default/objects/FEC_Campaign__c/fields/FEC_CampaignId__c.field-meta.xml
<CustomField>
    <fullName>FEC_CampaignId__c</fullName>
    <label>Campaign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>