force-app/main/default/objects/FEC_Campaign__c/fields/FEC_MaxCallingAttempt__c.field-meta.xml
<CustomField>
    <fullName>FEC_MaxCallingAttempt__c</fullName>
    <label>MaxCallingAttempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>